# application

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main.yml
resources/: app.manifest  resource.hpp  resource.in.rc
src/: controller.cpp  controller.hpp  main.cpp  model.cpp  model.hpp  view.cpp  view.hpp
src/lib/: CMakeLists.txt  api.cpp  api.hpp  markdown.cpp  markdown.hpp  registry.cpp  registry.hpp  requests.cpp  requests.hpp  settings.cpp  settings.hpp  storage.cpp  storage.hpp  uuid.hpp
src/views/: about.cpp  about.hpp  api-key.cpp  api-key.hpp  chat.cpp  chat.hpp  instructions.cpp  instructions.hpp  keys.cpp  keys.hpp  model-selector.cpp  model-selector.hpp  splitter.cpp  splitter.hpp  status-bar.cpp  status-bar.hpp
tests/: CMakeLists.txt  api.cpp  markdown.cpp  registry.cpp  requests.cpp  settings.cpp  storage.cpp  uuid.cpp
